# cpp-webserver-playground

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Form.cpp  List.cpp  List.hpp  README.md  Record.hpp  Table.cpp  Table.hpp  example.cpp  main.cpp  tests.cpp  todo.cpp  todo.hpp
.github/workflows/: c-cpp.yml
html/: home.html  index.html  index_wide.html
html/document/: list.html  new.html  view.html
html/movie/: list.html
html/profile/: edit.html
html/timeentry/: edit.html  list.html  list_empty.html  new.html  report.html
html/todo/: edit.html
scripts/: build-release.sh  create-release.sh
src/: CrudMain.cpp  CrudServer.cpp  CrudServer.hpp  CrudServerApplication.cpp  CrudServerApplication.hpp  Element.hpp  Form.cpp  Hidden.cpp  Hidden.hpp  List.cpp  List.hpp  LoginMain.cpp  LoginServer.cpp  LoginServer.hpp  LoginServerApplication.cpp  LoginServerApplication.hpp  Page.cpp  Page.hpp  Password.cpp  Password.hpp  PocoWebServer.cpp  PocoWebServer.hpp  Record.cpp  Record.hpp  RecursiveWebServer.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp  SessionId.cpp  SessionId.hpp  Submit.cpp  Submit.hpp  Table.cpp  Table.hpp  TestServer.cpp  TestServer.hpp  Text.cpp  Text.hpp  Todo.cpp  (+5 more)
src/Calendar/: CalendarController.cpp  CalendarController.hpp
src/Csv/: CsvFileReader.cpp  CsvFileReader.hpp
src/Data/: AsJson.cpp  AsJson.hpp  Date.cpp  Date.hpp  Event.cpp  Event.h  FieldTypes.hpp  Migration.cpp  Migration.hpp  Migrations.hpp  MigrationsV0.cpp  MigrationsV0.hpp  MigrationsV1.cpp  MigrationsV1.hpp  MigrationsV10.cpp  MigrationsV10.hpp  MigrationsV11.cpp  MigrationsV11.hpp  MigrationsV2.cpp  MigrationsV2.hpp  MigrationsV3.cpp  MigrationsV3.hpp  MigrationsV4.cpp  MigrationsV4.hpp  MigrationsV5.cpp  MigrationsV5.hpp  MigrationsV6.cpp  MigrationsV6.hpp  MigrationsV7.cpp  MigrationsV7.hpp  MigrationsV8.cpp  MigrationsV8.hpp  MigrationsV9.cpp  MigrationsV9.hpp  Movie.cpp  Movie.hpp  PasswordSalting.cpp  PasswordSalting.hpp  PasswortSalting.cpp  Person.cpp  (+17 more)
src/DateTime/: Date.cpp  Date.hpp  Month.cpp  Month.hpp  Time.cpp  Time.hpp
src/Document/: DocumentController.cpp  DocumentController.hpp
src/Email/: SendEmail.cpp  SendEmail.hpp  SendEmailController.hpp  SendEmailMain.cpp
src/Events/: CalendarController.cpp  CalendarController.hpp  EventList.cpp  EventList.hpp  WeeklyAgenda.cpp  WeeklyAgenda.hpp
src/FileSystem/: ReadFromFile.cpp  ReadFromFile.hpp
src/Filter/: ByOwner.cpp  ByOwner.hpp
src/Groups/: GroupManagementApplication.cpp  GroupManagementApplication.hpp
src/Html/: ActionLink.cpp  ActionLink.hpp  Alert.cpp  Alert.hpp  AlertType.hpp  Footer.cpp  Footer.hpp  Header.cpp  Header.hpp  List.cpp  List.hpp  Page.cpp  Page.hpp  Presentation.cpp  Presentation.hpp  Table.cpp  Table.hpp
src/Http/: NotFoundHandler.cpp  NotFoundHandler.hpp  NullHandler.cpp  NullHandler.hpp  Request.cpp  Request.hpp  RequestDispatcher.cpp  RequestDispatcher.hpp  RequestHandler.hpp  RequestHandlerList.hpp  Response.cpp  Response.hpp  RouteId.cpp  RouteId.hpp  Router.cpp  Router.hpp  Session.cpp  Session.hpp  SessionData.cpp  SessionData.hpp  SessionId.cpp  SessionStorage.cpp  SessionStorage.hpp  SessionStorageSql.cpp  SessionStorageSql.hpp  handler_type.hpp
src/ImageBrowser/: ImageBrowserApplication.cpp  ImageBrowserApplication.hpp  ImageBrowserController.hpp  ImageBrowserMain.cpp
src/Impl/: PocoPageHandler.cpp  PocoPageHandler.hpp  PocoWebServer.cpp  PocoWebServer.hpp  SimpleWebServer.cpp  SimpleWebServer.hpp  check_memory_usage.cpp
src/Input/: CheckBoxSelect.cpp  CheckBoxSelect.hpp  Date.cpp  Date.h  Element.hpp  Form.cpp  Form.hpp  Hidden.cpp  Hidden.hpp  Password.cpp  Password.hpp  Select.cpp  Select.hpp  Submit.cpp  Submit.hpp  Text.cpp  Text.hpp  TimeElement.cpp  TimeElement.hpp
src/Invoices/: InvoicesApplication.cpp  InvoicesApplication.hpp  InvoicesMain.cpp
src/Login/: LoginComponent.hpp  LoginController.cpp  LoginController.hpp  LoginMain.cpp  LoginServer.hpp  LoginServerApplication.cpp  LoginServerApplication.hpp  ProfileController.cpp  ProfileController.hpp  SessionId.cpp  SessionId.hpp
src/Proto/: Event.cpp  Event.hpp  ScaffoldRecord.cpp  ScaffoldRecord.hpp
src/ProtoServer/: ProtoServerApplication.cpp  ProtoServerApplication.hpp  ProtoServerMain.cpp
src/Server/: Confirm.cpp  Confirm.hpp  CrudComponent.hpp  CrudController.cpp  CrudController.hpp  CrudMain.cpp  CrudServer.hpp  CrudServerApplication.cpp  CrudServerApplication.hpp  MovieController.cpp  MovieController.hpp  RecursiveWebServer.cpp  RecursiveWebServer.hpp  SimpleController.cpp  SimpleController.hpp  SimpleController2.cpp  SimpleController2.hpp  TestServer.cpp  TestServer.hpp  TodoController.cpp  TodoController.hpp  WebServer.hpp  bunfet-example.hpp  style.hpp
src/Signup/: SignupController.cpp  SignupController.hpp
src/String/: capitalize.cpp  capitalize.hpp  createRandomUUID.cpp  createRandomUUID.hpp  currentDateTime.cpp  currentDateTime.hpp  escape.cpp  escape.hpp  join.cpp  join.hpp  repeat.cpp  repeat.hpp  split.cpp  split.hpp  timeDifference.cpp  timeDifference.hpp
src/Template/: BaseTemplate.cpp  BaseTemplate.hpp  TemplateDataHelper.hpp
src/Time/: Time.cpp  Time.hpp
src/TimeRecordingApp/: TimeCorrectionController.cpp  TimeCorrectionController.hpp  TimeEntry.cpp  TimeEntry.hpp  TimeEntryController.cpp  TimeEntryController.hpp  TimeRecordingApplication.cpp  (+4 more)
systemd/: cpp-webserver.service.in  todo.service.in
tests/: AlertTest.cpp  ByOwnerTest.cpp  CalendarTest.cpp  CrudServerTest.cpp  FakeBrowser.cpp  FakeBrowser.hpp  ImageBrowserTest.cpp  InputTest.cpp  LambdaTest.cpp  LoginServerTest.cpp  MovieTest.cpp  PasswordChangeTest.cpp  PocoDateTimeTest.cpp  PocoPageHandlerTest.cpp  PocoWebServerTest.cpp  RequestTest.cpp  ResponseTest.cpp  SessionIdTest.cpp  SessionTest.cpp  SignupTest.cpp  TimeConvertTest.cpp  TimeCorrectionControllerTest.cpp  TimeEntryControllerTest.cpp  TimeEntryTest.cpp  TimeRecordingApplicationTest.cpp  TimeRecordingSchema.cpp  TodoTest.cpp  UserAdminTest.cpp  WebServerTest.cpp  applying_time_entry_corrections.sql  curl-test.sh  doctest.h
(+12 files in other folders)
